--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 09.01.2022 13:57:02</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 10.01.2022 06:12:39</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 09. 01. 2022</h5>
+<h5>Pondělí, 10. 01. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Frankfurtská</strong>
@@ -50,9 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 9.1.2022</div>
+<div class="nadpis">Pondělí 10.1.2022</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -63,16 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s párkem</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g  Kapsa z vepřové pečeně plněná šunkou, žampióny a vejci, mačkané brambory s cibulkou</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na grilu s klobásou a sázeným vejcem na šunce, smažené bramborové plátky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou gratinovaný sýrem a brokolicí, hráškové pyré s máslem a sypané parmazánem, vařené vejce</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pekingské hovězí nudličky se zeleninou, zázvorem a chilli, smažené bramborové hranolky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné omáčce z modrého sýra, restované špecle</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený řízek z vepřové kotlety bez kosti, bramborový salát, citrón</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný hořčičným dresinkem, filírovaná vepřová panenka, vařené vejce, parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Sekané masové biftečky na grilu s pepřovou redukcí, vařené brambory s máslem, hořčice, cibule, beraní roh</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Španělská omáčka s hovězí roštěnou, dušená jasmínová rýže</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s klobásou a feferonkou, pečené brambory s kmínem</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, grilovaná karotka s paprikou, smetanová omáčka s anglickou slaninou, grusetky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight">160g</td><td class="menuName">Smažené řízky z kuřecích prsou obalené v cornflakes a vepřové z kotlety obalené v jemné strouhance, vařené brambory s máslem a šnitlíkem, citron</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné houbové omáčce, restované špecle</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusilli s kuřecím masem, anglickou slaninou, pórkem a rozšlehanými vejci, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí soté se zeleninou, smažené bramborové hranolky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -80,7 +80,45 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm"></table>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">100 g</td>
+<td class="title">Kachní rillettes s marinovanými šalotkami
+a naším kmínovým chlebem 1ab,3,7,12</td>
+<td class="pricem">139 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Pravý ruský boršč z hovězí oháňky, uzených vepřových žeber,
+kořenové zeleniny a červené řepy	 se zakysanou smetanou 7,9</td>
+<td class="pricem">75 Kč</td>
+</tr>
+<tr>
+<td class="amount">150 g</td>
+<td class="title">Pečená krůtí roláda plněná naší slaninovou nádivkou se špenátem
+s bramborovými knedlíky s opečenou houskou 1a,3,7</td>
+<td class="pricem">169 Kč</td>
+</tr>
+<tr>
+<td class="amount">200 g</td>
+<td class="title">Grilované medailonky z vepřové panenky na krémovém rizotu
+s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
+7,12	</td>
+<td class="pricem">225 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Hruškový závin s vlašskými ořechy a vanilkovým krémem 1a,3,7,8c</td>
+<td class="pricem">85 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Kulajda s houbami a vařenými vejci 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Moravský vrabec s červeným zelím a variací našich knedlíků 1a,3,7,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Smažené holandské řízečky se sýrem s bramborovou kaší a nakládanou okurkou 1a,3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">100g</td><td class="title">Smažené sýrové nugety na zeleninovém salátu s brusinkovou majonézou a rozpečenou bylinkovou bagetou 1a,3,7,10,12</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
