--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.01.2022 06:11:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.01.2022 06:36:30</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Úterý, 11. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kari polévka s kuřecím masem a zeleninou</strong>
+<strong>Čočková s párkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Hamburská Vepřová plec s houskovým knedlíkem NEBO rýží</strong>
+<strong>Chilli con carne s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							133,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny se sýrovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Tilapie v pivním těstíčku s hranolkami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							135,-
 						</span>
 </p>
 <p>
