--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.01.2022 08:10:57</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.01.2022 08:36:24</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 11.1.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Cheesecake z bílé čokolády</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krémová cibulová polévka, bílé víno, tymián, bylinkový kruton - samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">30ml Krémová cibulová polévka, bílé víno, tymián, bylinkový kruton - v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí rajská pečeně, karlovarský knedlík, perníkový chips, tomatová marmeláda <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Grilované kuřecí prso plněné sušenými rajčaty, pečené brambory, kuřecí jus, polníček <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Houbové kroupeto, sázené vejce, rukola, pečené cherry rajče <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
