--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.01.2022 08:36:24</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.01.2022 09:13:34</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -164,7 +164,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s citronem a ancovickovym dresinkem, smazena zeleninova ryze, salatek 139</li><li>Smazena ryze s opekanou chobotnici, zeleninou a ancovickovym dresinkem, citron, salatek 175</li><li>Burrito s mexickym carnitas {pikantni trhane veprove} a goudou, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Pecene rolovane irske jehneci hrudi v bramborove loksi s pecenou podzimni zeleninou, salatek {L} 169</li><li>Marocka cizrnova tazine s pecenou maslovou dyni, rajcaty, korenim Ras el hanout a grilovanym syrem halloumi, zeleninovy bulgur {L} 139 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely s dynovou salsou, cizrnovy hummus, salatek 139</li><li>Peceny cerstvy morsky vlk s dynovou salsou, cizrnovy hurmmus, salatek 169</li><li>Indonesky kruti sataj kebab s arasidovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Pecene danci hrudi s nadivkou s kachnimi jatry a portobello, bramborove spalicky, cervena repa s jablky na vine {L} 165</li><li>Smazeny kapustovy rizek s goudou, stouchane brambory se zelenou cibulkou, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
